log/build_2025-06-18_13-53-09/my_cpp_package/stdout.log
[1/2] Building CXX object CMakeFiles/my_node.dir/src/my_node.cpp.o
FAILED: CMakeFiles/my_node.dir/src/my_node.cpp.o 
/Users/swin/code/ros2/ros2_humble/.pixi/envs/default/bin/arm64-apple-darwin20.0.0-clang++ -DDEFAULT_RMW_IMPLEMENTATION=rmw_cyclonedds_cpp -isystem /Users/swin/code/ros2/ros2_humble/.pixi/envs/default/include/rclcpp -isystem /Users/swin/code/ros2/ros2_humble/.pixi/envs/default/include/cv_bridge -isystem /Users/swin/code/ros2/ros2_humble/.pixi/envs/default/include/image_transport -isystem /Users/swin/code/ros2/ros2_humble/.pixi/envs/default/include/sensor_msgs -isystem /Users/swin/code/ros2/ros2_humble/.pixi/envs/default/include/python3.11 -isystem /Users/swin/code/ros2/ros2_humble/.pixi/envs/default/lib/python3.11/site-packages/numpy/core/include -isystem /Users/swin/code/ros2/ros2_humble/.pixi/envs/default/include/opencv4 -isystem /Users/swin/code/ros2/ros2_humble/.pixi/envs/default/include/ament_index_cpp -isystem /Users/swin/code/ros2/ros2_humble/.pixi/envs/default/include/libstatistics_collector -isystem /Users/swin/code/ros2/ros2_humble/.pixi/envs/default/include/builtin_interfaces -isystem /Users/swin/code/ros2/ros2_humble/.pixi/envs/default/include/rosidl_runtime_c -isystem /Users/swin/code/ros2/ros2_humble/.pixi/envs/default/include/rcutils -isystem /Users/swin/code/ros2/ros2_humble/.pixi/envs/default/include/rosidl_typesupport_interface -isystem /Users/swin/code/ros2/ros2_humble/.pixi/envs/default/include/rosidl_runtime_cpp -isystem /Users/swin/code/ros2/ros2_humble/.pixi/envs/default/include/rosidl_typesupport_fastrtps_cpp -isystem /Users/swin/code/ros2/ros2_humble/.pixi/envs/default/include/rmw -isystem /Users/swin/code/ros2/ros2_humble/.pixi/envs/default/include/rosidl_typesupport_fastrtps_c -isystem /Users/swin/code/ros2/ros2_humble/.pixi/envs/default/include/rosidl_typesupport_introspection_c -isystem /Users/swin/code/ros2/ros2_humble/.pixi/envs/default/include/rosidl_typesupport_introspection_cpp -isystem /Users/swin/code/ros2/ros2_humble/.pixi/envs/default/include/rcl -isystem /Users/swin/code/ros2/ros2_humble/.pixi/envs/default/include/rcl_interfaces -isystem /Users/swin/code/ros2/ros2_humble/.pixi/envs/default/include/rcl_logging_interface -isystem /Users/swin/code/ros2/ros2_humble/.pixi/envs/default/include/rcl_yaml_param_parser -isystem /Users/swin/code/ros2/ros2_humble/.pixi/envs/default/include/tracetools -isystem /Users/swin/code/ros2/ros2_humble/.pixi/envs/default/include/rcpputils -isystem /Users/swin/code/ros2/ros2_humble/.pixi/envs/default/include/statistics_msgs -isystem /Users/swin/code/ros2/ros2_humble/.pixi/envs/default/include/rosgraph_msgs -isystem /Users/swin/code/ros2/ros2_humble/.pixi/envs/default/include/rosidl_typesupport_cpp -isystem /Users/swin/code/ros2/ros2_humble/.pixi/envs/default/include/rosidl_typesupport_c -isystem /Users/swin/code/ros2/ros2_humble/.pixi/envs/default/include/geometry_msgs -isystem /Users/swin/code/ros2/ros2_humble/.pixi/envs/default/include/std_msgs -isystem /Users/swin/code/ros2/ros2_humble/.pixi/envs/default/include/message_filters -ftree-vectorize -fPIC -fstack-protector-strong -O2 -pipe -stdlib=libc++ -fvisibility-inlines-hidden -fmessage-length=0 -isystem /Users/swin/code/ros2/ros2_humble/.pixi/envs/default/include -arch arm64 -isysroot /Library/Developer/CommandLineTools/SDKs/MacOSX.sdk -MD -MT CMakeFiles/my_node.dir/src/my_node.cpp.o -MF CMakeFiles/my_node.dir/src/my_node.cpp.o.d -o CMakeFiles/my_node.dir/src/my_node.cpp.o -c /Users/swin/code/ros2/ros2_humble/src/my_cpp_package/src/my_node.cpp
/Users/swin/code/ros2/ros2_humble/src/my_cpp_package/src/my_node.cpp:43:13: error: redefinition of 'f_x'
   43 |       float f_x = (6.4f * 720.0f) / 7.2f;
      |             ^
/Users/swin/code/ros2/ros2_humble/src/my_cpp_package/src/my_node.cpp:42:13: note: previous definition is here
   42 |       float f_x = (6.4f * 1280.0f) / 9.6f;
      |             ^
/Users/swin/code/ros2/ros2_humble/src/my_cpp_package/src/my_node.cpp:45:32: error: expected ';' at end of declaration
   45 |       float c_y = 720.0f / 2.0f
      |                                ^
      |                                ;
/Users/swin/code/ros2/ros2_humble/src/my_cpp_package/src/my_node.cpp:57:16: error: use of undeclared identifier 'f_y'
   57 |           0.0, f_y, c_y, 0.0,
      |                ^
/Users/swin/code/ros2/ros2_humble/src/my_cpp_package/src/my_node.cpp:60:19: error: no matching member function for call to 'publish'
   60 |       publisher_->publish(message);
      |       ~~~~~~~~~~~~^~~~~~~
/Users/swin/code/ros2/ros2_humble/.pixi/envs/default/include/rclcpp/rclcpp/publisher.hpp:383:3: note: candidate function not viable: no known conversion from 'sensor_msgs::msg::CameraInfo' (aka 'CameraInfo_<std::allocator<void>>') to 'const rcl_serialized_message_t' (aka 'const rcutils_uint8_array_s') for 1st argument
  383 |   publish(const rcl_serialized_message_t & serialized_msg)
      |   ^       ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
/Users/swin/code/ros2/ros2_humble/.pixi/envs/default/include/rclcpp/rclcpp/publisher.hpp:389:3: note: candidate function not viable: no known conversion from 'sensor_msgs::msg::CameraInfo' (aka 'CameraInfo_<std::allocator<void>>') to 'const SerializedMessage' for 1st argument
  389 |   publish(const SerializedMessage & serialized_msg)
      |   ^       ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
/Users/swin/code/ros2/ros2_humble/.pixi/envs/default/include/rclcpp/rclcpp/publisher.hpp:403:3: note: candidate function not viable: no known conversion from 'sensor_msgs::msg::CameraInfo' (aka 'CameraInfo_<std::allocator<void>>') to 'rclcpp::LoanedMessage<ROSMessageType, allocator<void>>' (aka 'LoanedMessage<sensor_msgs::msg::Image_<std::allocator<void>>, std::allocator<void>>') for 1st argument
  403 |   publish(rclcpp::LoanedMessage<ROSMessageType, AllocatorT> && loaned_msg)
      |   ^       ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
/Users/swin/code/ros2/ros2_humble/.pixi/envs/default/include/rclcpp/rclcpp/publisher.hpp:251:3: note: candidate template ignored: could not match 'unique_ptr' against 'CameraInfo_'
  251 |   publish(std::unique_ptr<T, ROSMessageTypeDeleter> msg)
      |   ^
/Users/swin/code/ros2/ros2_humble/.pixi/envs/default/include/rclcpp/rclcpp/publisher.hpp:292:3: note: candidate template ignored: requirement 'std::is_same<sensor_msgs::msg::CameraInfo_<std::allocator<void>>, sensor_msgs::msg::Image_<std::allocator<void>>>::value' was not satisfied [with T = sensor_msgs::msg::CameraInfo]
  292 |   publish(const T & msg)
      |   ^
/Users/swin/code/ros2/ros2_humble/.pixi/envs/default/include/rclcpp/rclcpp/publisher.hpp:322:3: note: candidate template ignored: could not match 'unique_ptr' against 'CameraInfo_'
  322 |   publish(std::unique_ptr<T, PublishedTypeDeleter> msg)
      |   ^
/Users/swin/code/ros2/ros2_humble/.pixi/envs/default/include/rclcpp/rclcpp/publisher.hpp:364:3: note: candidate template ignored: requirement 'rclcpp::TypeAdapter<Image_<allocator<void>>>::integral_constant<bool, false>::value' was not satisfied [with T = sensor_msgs::msg::CameraInfo]
  364 |   publish(const T & msg)
      |   ^
4 errors generated.
ninja: build stopped: subcommand failed.
